# Morse-API

./: Makefile  README.md  pyproject.toml
morse_api/: __init__.py  api.py  manage.py
morse_api/api/: admin.py  apps.py  consumers.py  models.py  selectors.py  serializers.py  services.py  signals.py  views.py
morse_api/api/migrations/: 0001_initial.py  0002_profile.py  0003_alter_message_options_rename_text_message_message_and_more.py  0004_rename_message_message_body.py  0005_room_avatar.py  0006_userroom_unread_messaged.py  0007_rename_unread_messaged_userroom_unread_messages.py  0008_alter_room_avatar.py
morse_api/project/: asgi.py  channelsmiddleware.py  urls.py
morse_api/project/settings/: __init__.py  base.py  channels.py  cloudinary.py  envvars.py  restframework.py
morse_api/project/settings/templates/: settings.dev.py
